[gd_scene load_steps=10 format=3 uid="uid://qvrgm6fwo21y"]

[ext_resource type="Texture2D" uid="uid://cheu7jnmvppe6" path="res://blank.png" id="1_qplyj"]
[ext_resource type="Script" uid="uid://cipnxkx6o7muu" path="res://score_scene.gd" id="1_w68ab"]
[ext_resource type="FontFile" uid="uid://by5tl6nk3w3fu" path="res://neon_pixel-7.ttf" id="3_ls2wr"]
[ext_resource type="Script" uid="uid://djjyg44kihves" path="res://HighScoreListRichText.gd" id="4_0gct6"]
[ext_resource type="AudioStream" uid="uid://cf2ckupjpdjpw" path="res://sounds/victory.wav" id="5_bkbli"]

[sub_resource type="LabelSettings" id="LabelSettings_dgq7a"]
font = ExtResource("3_ls2wr")
font_size = 58

[sub_resource type="Theme" id="Theme_owjvh"]
default_font = ExtResource("3_ls2wr")
default_font_size = 52

[sub_resource type="LabelSettings" id="LabelSettings_fviek"]
font = ExtResource("3_ls2wr")
font_size = 58

[sub_resource type="LabelSettings" id="LabelSettings_f3gyu"]
font = ExtResource("3_ls2wr")
font_size = 58

[node name="ScoreScene" type="Node2D"]
script = ExtResource("1_w68ab")

[node name="ScoreBackground" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(600, 480)
scale = Vector2(2, 2)
texture = ExtResource("1_qplyj")

[node name="StartForTitleLabel" type="Label" parent="."]
offset_left = 219.0
offset_top = 784.0
offset_right = 989.0
offset_bottom = 843.0
text = "Press START to return to TITLE"
label_settings = SubResource("LabelSettings_dgq7a")
uppercase = true

[node name="ScoreTitleLabel" type="Label" parent="."]
offset_left = 219.0
offset_top = 120.0
offset_right = 989.0
offset_bottom = 179.0
text = "Reflex Test Results"
label_settings = SubResource("LabelSettings_dgq7a")
uppercase = true

[node name="HighScoreScroller" type="ScrollContainer" parent="."]
visible = false
offset_left = 220.0
offset_top = 200.0
offset_right = 983.0
offset_bottom = 761.0
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="HighScoreListRichText" type="RichTextLabel" parent="HighScoreScroller"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_owjvh")
bbcode_enabled = true
text = "AAA: 20
AAA: 19
AAA: 18
AAA: 17
AAA: 16
AAA: 15
AAA: 14
[color=gold]AAA: 13[/color]
AAA: 12
AAA: 11
AAA: 10
AAA: 9
AAA: 8
AAA: 7
AAA: 6
AAA: 5
AAA: 4
AAA: 3
AAA: 2
AAA: 1
AAA: 123
AAA: 1234
AAA: 12345
AAA: 123456"
fit_content = true
script = ExtResource("4_0gct6")

[node name="VictoryMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bkbli")
volume_db = -1.0
autoplay = true

[node name="InputInitialsLabel" type="Label" parent="."]
offset_left = 223.0
offset_top = 280.0
offset_right = 910.0
offset_bottom = 339.0
text = "Please input your initials


_ _ _"
label_settings = SubResource("LabelSettings_fviek")

[node name="InputInitialsActual" type="Label" parent="."]
offset_left = 226.0
offset_top = 449.0
offset_right = 266.0
offset_bottom = 472.0
label_settings = SubResource("LabelSettings_f3gyu")
